# libtta

./: .gitignore  Makefile.am  Makefile.mipsel  Makefile.rm  README  config.h  configure.ac  libtta.c  libtta.h  libtta.sln  libtta.vcxproj
console/: Makefile.am  Makefile.mipsel  console.sln  console.vcxproj  tta.c  tta.h
